# CCbot

./: README.md  settings.gradle.kts
IA/: agrupado.py  databases.py  nodes.py  testing_rag.py  workflow.py
IA/chromadb/22975f03-4616-4ac1-b037-bbf468994c10/: index_metadata.pickle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ccbot_app/: MainActivity.java
app/src/main/java/com/example/ccbot_app/adapters/: ChatAdapter.java
app/src/main/java/com/example/ccbot_app/models/: ChatResponse.java  Message.java
app/src/main/res/layout/: activity_main.xml  item_loading.xml  item_message_bot.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/example/ccbot_app/: ExampleUnitTest.java
app_v1/app/src/main/res/drawable/: bg_input_rounded.xml  bg_send_button_rounded.xml  bg_user_bubble.xml
app_v1/app/src/main/res/layout/: activity_main.xml  item_message_user.xml
app_v1/app/src/main/res/values/: strings.xml
app_v1/app/src/main/res/values-night/: themes.xml
app_v1/gradle/wrapper/: gradle-wrapper.properties
app_v1/rag/: download_model.py
model/: insgestion.py  langgraph.json  main.py  nodes.py  prompts.py  pyproject.toml  vector_store.py  workflow.py
model/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
model/chroma_db/: chroma.sqlite3
model/vector-store/chroma_db/: chroma.sqlite3
rag/: api.py  criar_db.py  integracao.py  rag_ambos.py  rag_ementa.py  rag_livros.py
(+6 files in other folders)
